// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paginator should render a default paginator 1`] = `
<Paginator
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  itemCountPerPage={20}
  onPageChange={[Function]}
  selectedPage={1}
  totalCount={2234}
>
  <ResponsiveElement
    defaultElement={
      <div
        aria-label="pagination"
        className="paginator"
        role="navigation"
      >
        <button
          aria-disabled={true}
          aria-label="first"
          className="nav-link left-controls is-disabled"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={null}
          type="button"
        >
          Terra.paginator.first
        </button>
        <button
          aria-disabled={true}
          aria-label="previous"
          className="nav-link left-controls previous icon-only is-disabled"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={null}
          type="button"
        >
          <span
            className="visually-hidden"
          >
            Previous
          </span>
          <span
            className="icon"
          />
        </button>
        Terra.paginator.pageIndex
        <button
          aria-disabled={false}
          aria-label="next"
          className="nav-link right-controls next icon-only"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="visually-hidden"
          >
            Next
          </span>
          <span
            className="icon"
          />
        </button>
        <button
          aria-disabled={false}
          aria-label="last"
          className="nav-link right-controls"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
          type="button"
        >
          Terra.paginator.last
        </button>
      </div>
    }
    responsiveTo="parent"
    small={
      <div
        className="paginator"
      >
        <button
          aria-disabled={true}
          aria-label="first"
          className="nav-link left-controls is-disabled"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={null}
          type="button"
        >
          Terra.paginator.first
        </button>
        <button
          aria-disabled={true}
          aria-label="previous"
          className="nav-link left-controls previous is-disabled"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={null}
          type="button"
        >
          <span
            className="icon"
          />
          Terra.paginator.previous
        </button>
        <button
          aria-current="page"
          aria-label="Page 1"
          className="nav-link is-selected"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={null}
          type="button"
        >
          1
        </button>
        <button
          aria-current={false}
          aria-label="Page 2"
          className="nav-link"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
          type="button"
        >
          2
        </button>
        <button
          aria-current={false}
          aria-label="Page 3"
          className="nav-link"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
          type="button"
        >
          3
        </button>
        <button
          aria-current={false}
          aria-label="Page 4"
          className="nav-link"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
          type="button"
        >
          4
        </button>
        <button
          aria-current={false}
          aria-label="Page 5"
          className="nav-link"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
          type="button"
        >
          5
        </button>
        <button
          aria-current={false}
          aria-label="Page 6"
          className="nav-link"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
          type="button"
        >
          6
        </button>
        <button
          aria-current={false}
          aria-label="Page 7"
          className="nav-link"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
          type="button"
        >
          7
        </button>
        <button
          aria-current={false}
          aria-label="Page 8"
          className="nav-link"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
          type="button"
        >
          8
        </button>
        <button
          aria-current={false}
          aria-label="Page 9"
          className="nav-link"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
          type="button"
        >
          9
        </button>
        <button
          aria-current={false}
          aria-label="Page 10"
          className="nav-link"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
          type="button"
        >
          10
        </button>
        <button
          aria-disabled={false}
          aria-label="next"
          className="nav-link right-controls next"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
          type="button"
        >
          Terra.paginator.next
          <span
            className="icon"
          />
        </button>
        <button
          aria-disabled={false}
          aria-label="last"
          className="nav-link right-controls"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
          type="button"
        >
          Terra.paginator.last
        </button>
      </div>
    }
  >
    <div />
  </ResponsiveElement>
</Paginator>
`;

exports[`Paginator should render a paginator without page links 1`] = `
<Paginator
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  onPageChange={[Function]}
>
  <ResponsiveElement
    defaultElement={
      <div
        aria-label="pagination"
        className="paginator pageless"
        role="navigation"
      >
        <button
          aria-disabled={false}
          aria-label="previous"
          className="nav-link left-controls previous icon-only"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="visually-hidden"
          >
            Previous
          </span>
          <span
            className="icon"
          />
        </button>
        <button
          aria-disabled={false}
          aria-label="next"
          className="nav-link right-controls next icon-only"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="visually-hidden"
          >
            Next
          </span>
          <span
            className="icon"
          />
        </button>
      </div>
    }
    responsiveTo="parent"
    small={
      <div
        className="paginator pageless"
      >
        <button
          aria-disabled={false}
          aria-label="previous"
          className="nav-link left-controls previous"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="icon"
          />
          Terra.paginator.previous
        </button>
        <button
          aria-disabled={false}
          aria-label="next"
          className="nav-link right-controls next"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
          type="button"
        >
          Terra.paginator.next
          <span
            className="icon"
          />
        </button>
      </div>
    }
  >
    <div />
  </ResponsiveElement>
</Paginator>
`;
